--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cryptocommerce",
+  "name": "grocery_delivery",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,36 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@headlessui/react": "^2.1.8",
-    "@heroicons/react": "^2.1.5",
-    "@mui/material": "^6.1.1",
-    "bignumber.js": "^9.1.2",
-    "chai": "^4.2.0",
-    "ether": "^0.0.9",
-    "firebase": "^10.13.2",
-    "firebase-admin": "^12.5.0",
-    "hardhat": "^2.22.12",
     "lottie-react": "^2.4.0",
-    "next": "14.2.13",
+    "next": "15.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.4"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
-    "@nomicfoundation/hardhat-ethers": "^3.0.8",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "chai": "^4.2.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
-    "ethers": "^6.13.2",
-    "hardhat-ethers": "^1.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
