--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "lottie-react": "^2.4.0",
     "next": "15.0.2",
     "react": "^18.3.1",
